Cambio de circulos por hexagonos con iconos de Bici. Agregrado nombre de cada estaciÃn sobre el mapa.

--- a/index.html
+++ b/index.html
@@ -44,147 +44,4 @@
 <script src="http://d3js.org/d3.v3.min.js"></script>
 <script src="http://d3js.org/topojson.v1.min.js"></script>
 <script src="http://d3js.org/queue.v1.min.js"></script>
-<script src="lib/kdtree.js"></script>
-<script src="lib/philogl.js"></script>
-<script src="lib/graph.js"></script>
-<script src="lib/mingle.js"></script>
-<script>
-
-var color = d3.scale.quantize()
-  .domain([0, 9000]) //Arreglar para que calcule el rango este y no este hardcodeado
-  .range(d3.range(5).map(function(d) { return "q" + d + "-3"; }));
-
-var width = 1200, height = 525;
-var t = [-985920.143529706,-513714.48739570886];
-var s = 2055.1798;
-//Creo la proyeccion mercator con centro en el centroide de shape de Abila con d3.geo.centroid(json)
-var projectionMingle = d3.geo.mercator().center([-58.416132, -34.585615]).translate([400,100]).scale(400000);
-var projection = d3.geo.mercator().center([-58.416132, -34.585615]);
-var path = d3.geo.path().projection(projection).pointRadius(3/s);
-var zoom = d3.behavior.zoom().translate(t).scale(s);
-
-svg = d3.select("#map").append("svg")
-	.attr("width", width)
-	.attr("height", height)
-	.call(zoom.on("zoom", redraw))
-	.append("g")
-	.attr("name","Buenos Aires")
-	.attr("transform","translate("+t+")scale("+s+")")
-	.style("stroke-width", 1/s);
-
-function redraw() {
-	var s = d3.event.scale;
-	var t = d3.event.translate;
-
-	svg.style("stroke-width", 1/s).attr("transform", "translate(" + t + ")scale(" + s + ")");
-}
-function drawMap(error, barrios, calles, estaciones, lineas) {
-	aux = lineas;
-	svg.append("path")
-		//.datum({type: "FeatureCollection", features: topojson.feature(barrios, barrios.objects.neighborhoods).features})
-		.datum({type: "FeatureCollection", features: topojson.feature(barrios, barrios.objects.barriosba).features})
-		.attr("d", path)
-		.attr('class', 'barrios');
-
-	svg.append("path")
-		.datum({type: "FeatureCollection", features: topojson.feature(calles, calles.objects.callesba).features})
-		//.datum({type: "FeatureCollection", features: topojson.feature(calles, barrios.objects.callesba).features})
-		.attr("d", path)
-		.attr('class', 'calles');
-
-	svg.append("path")
-		.datum({type: "FeatureCollection", features: topojson.feature(estaciones, estaciones.objects.estaciones).features})
-		.attr("d", path)
-		.attr('class', 'estaciones');
-
-	drawrecorridos(lineas);
-	/*
-	svg.append("path")
-		.datum({type: "FeatureCollection", features: topojson.feature(lineas, lineas.objects.lineasrecorridos).features})
-		.attr("d", path)
-		.attr('class', 'lineas';
-	*/
-	
-}
-function drawrecorridos(lineas){
-
-	var select = document.getElementById("estaciondestino");
-	var opcion = select.options[select.selectedIndex].value;
-	console.log(opcion);
-	svg.selectAll('.lineas')
-			.data(topojson.feature(lineas, lineas.objects.lineasrecorridos).features)
-			.enter().append('path')
-			.attr('id', 'recorrido')
-			.attr('coriginal', function(d) {return color(d.properties.count);})
-			.attr("class", function(d) {return color(d.properties.count);})
-	    	.attr("d", path);
-}
-
-function renderrecorridos(){
-
-	var select = document.getElementById("estaciondestino");
-	var opcion = select.options[select.selectedIndex].value;
-	if(opcion == 0){
-		d3.selectAll("#recorrido").each(function(d, i) {
-			this.setAttribute('class',this.getAttribute('coriginal'));
-	    });
-
-	}else{
-		d3.selectAll("#recorrido").each(function(d, i) {
-			aux = this;
-	        if(d.properties.destino != opcion){
-	        	this.setAttribute('class','oculto');
-	        }else{
-	        	this.setAttribute('class',this.getAttribute('coriginal'));
-	        }
-	    });
-	}
-}
-queue()
-	.defer(d3.json, "geojson/barriosba.topojson") // topojson polygons
-	.defer(d3.json, "geojson/callesba.topojson") // geojson points
-	.defer(d3.json, "geojson/estaciones.topojson")
-	.defer(d3.json, "geojson/lineasrecorridos.topojson")
-    .await(drawMap); //function that uses files
-
-
-/*
-
-CODIGO MINGLE AGREGAR CANVAS PARA QUE FUNCIONE
-
-d3.json("data/mingle.json",function(error, json){
-	if (error) return console.warn(error);
- 	//data = json;
-	json.forEach(function(d) {
-      		d.data.coords[0] = projectionMingle([d.data.coords[0], d.data.coords[1]])[0];
-      		d.data.coords[1] = projectionMingle([d.data.coords[0], d.data.coords[1]])[1];
-      		d.data.coords[2] = projectionMingle([d.data.coords[2], d.data.coords[3]])[0];
-      		d.data.coords[3] = projectionMingle([d.data.coords[2], d.data.coords[3]])[1];
-   	});
-	data = json;
-	vizmingle();  
-});
-
-function vizmingle(){
-	//json = JSON.parse(data);
-	json = data;
-	var canvas = document.querySelector('canvas'),
-      	ctx = canvas.getContext('2d'),
-      	bundle;
-	delta = 1;
-	curviness = 0;
-	
-	bundle = new Bundler();
-      	bundle.setNodes(json);
-      	bundle.buildNearestNeighborGraph();
-      	bundle.MINGLE();
-	bundle.graph.each(function(node) {
-	ctx.strokeStyle = 'rgba(0, 200, 200, 0.2)';
-	ctx.lineWidth = 2;
-	var edges = node.unbundleEdges(delta);
-	Bundler.Graph.renderBezier(ctx, edges);
-
-});}
-*/
-
-</script>
+<script src="lib/ecobici.viz.js"></script>
