Agregado un div con el grafico de cantidad de viajes por anio.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,18 @@
 </head>
 <body>
 	<h1>Buenos Aires</h1>
-	<div id="map"></div>
+	<div id='contenedor'>
+		<div id="left">
+			<div id="map"></div>
+		</div>
+		<div id="right">
+				<div id='garea'>
+				</div>
+			<div id="infoestacion"></div>
+			<div id="agregado"></div>
+		</div>
+	</div>
+	</div>
 	<span> Estación Destino</span>
 	<select id="estaciondestino" onChange="renderrecorridos();" class="selectpicker">
 		<option value=0>TODAS</option>
