--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <link href="css/ecobici.css" rel="stylesheet" type="text/css">
 <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
+<link rel="icon" 
+      type="image/png" 
+      href="http://epok.buenosaires.gob.ar/media/mapa_publico/ecobici/estacion_de_bicicletas.png" />
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Visualizacion EcoBici</title>
