--- a/index.html
+++ b/index.html
@@ -12,13 +12,15 @@
 </head>
 <body>
 	<h1>Buenos Aires</h1>
+	<a id = 'about' href="about.html">About</a>
 	<div id='contenedor'>
 		<div id="left">
 			<div id="map"></div>
 		</div>
 		<div id="right">
+			<a id = 'Todos' onClick="renderrecorridos(0);">Todas</a>
 			<div id='garea'></div>
-			<div id='controles'>
+		<!--	<div id='controles'>
 				<span> Estación Origen</span>
 				<select id="estacionorigen" onChange="renderrecorridos();" class="selectpicker">
 					<option value=0>TODAS</option>
@@ -51,7 +53,7 @@
 					<option value="ALSINA "	>ALSINA </option>
 					<option value="PLAZA GÜEMES"	>PLAZA GÜEMES</option>
 				</select>
-			</div>
+			</div> -->
 			<div id="agregado"></div>
 		</div>
 	</div>
